# ros2-slam-nav-stack

./: .gitattributes  .gitignore  MODEL_ALIGNMENT.md  PROJECT_PROCESS.md  README.md  build.sh  clean.sh  diagnose_runtime.sh  piper_external.repos  run.sh  save_map.sh  setup_piper_open_class.sh  start_localization_guard.sh  start_mapping.sh  start_navigation.sh  start_navigation_3d.sh  start_relocalization.sh  start_robust_navigation.sh  start_safe_cmd_bridge.sh  start_simulation.sh  start_simulation_dynamic.sh  teleop.sh
src/cloud_relocalization/: CMakeLists.txt  README.md  package.xml
src/cloud_relocalization/config/: bnb_localization.yaml  icp_relocalization.yaml
src/cloud_relocalization/launch/: bnb_localization.launch.py  icp_relocalization.launch.py
src/cloud_relocalization/scripts/: relocalization_amcl_bridge.py
src/cloud_relocalization/src/: bnb_localization_node.cpp  icp_relocalization_node.cpp
src/mission_behavior/: CMakeLists.txt  README.md  package.xml
src/mission_behavior/behavior_tree/: mission_navigation_recovery.xml
src/mission_behavior/config/: mission_behavior.yaml
src/mission_behavior/launch/: mission_behavior.launch.py  piper_pick_place_demo.launch.py
src/mission_behavior/scripts/: mission_behavior_node.py  mission_piper_pick_place_demo_node.py
src/pb_nav2_plugins/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/perception_adapter/: CMakeLists.txt  README.md  package.xml
src/perception_adapter/launch/: adaptive_cloud_filter.launch.py
src/perception_adapter/src/: adaptive_cloud_filter.cpp
src/rgbd_navigation_perception/: CMakeLists.txt  README.md  package.xml
src/rgbd_navigation_perception/launch/: depth_obstacle_projector.launch.py
src/rgbd_navigation_perception/src/: depth_obstacle_projector.cpp
src/ros2_livox_simulation/: CMakeLists.txt
src/ros2_livox_simulation/src/: livox_points_plugin.cpp
src/ros2_livox_simulation/urdf/: mid360.xacro
src/safe_cmd_bridge/: CMakeLists.txt  README.md  package.xml
src/safe_cmd_bridge/config/: safe_cmd_bridge.yaml
src/safe_cmd_bridge/launch/: safe_cmd_bridge.launch.py
src/safe_cmd_bridge/scripts/: safe_cmd_bridge_node.py
src/slam_nav_bringup/: CMakeLists.txt  package.xml
src/slam_nav_bringup/behavior_tree/: navigate_through_poses_with_backup_recovery.xml  navigate_to_pose_with_backup_recovery.xml
src/slam_nav_bringup/config/: mapper_params_online_async.yaml  mapper_params_pcd_aligned.yaml  nav2_params.yaml  nav2_params_3d.yaml  nav2_params_3d_rgbd.yaml  nav2_params_large_arena.yaml
src/slam_nav_bringup/launch/: large_arena_robust_navigation.launch.py  mapping.launch.py  navigation.launch.py  navigation_3d.launch.py  robust_navigation.launch.py  scan.launch.py
src/slam_nav_bringup/map/: base1.pgm  base1.yaml  large_arena.yaml  large_arena_aligned1.pgm  large_arena_aligned1.yaml  large_arena_aligned1_filtered.pgm  large_arena_aligned1_filtered.yaml  large_arena_aligned2.pgm  large_arena_aligned2.yaml  large_arena_filtered.pgm  large_arena_filtered.yaml  nav_test_map.pgm  nav_test_map.yaml
src/slam_nav_bringup/rviz/: mapping.rviz  nav2_debug.rviz
src/slam_nav_bringup/scripts/: amcl_convergence_monitor.py  auto_explore_mapping.py  diagnose_runtime.py  localization_consensus_monitor.py  navigation_ready_monitor.py  publish_initial_pose.py
src/slam_nav_bringup/slam_nav_bringup/: __init__.py  base_profiles.py  localization_consensus.py
src/slam_nav_operator/: CMakeLists.txt  package.xml
src/slam_nav_operator/src/: operator_main.cpp
src/slam_nav_piper_bringup/: CMakeLists.txt  README.md  package.xml
src/slam_nav_piper_bringup/config/: piper_external_dependencies.yaml  piper_learning_boundary.yaml  piper_mobile_manipulation.yaml  piper_moveit2_boundary.yaml  piper_safety_limits.yaml  piper_visualization.rviz
src/slam_nav_piper_bringup/launch/: piper_mobile_manipulation.launch.py  piper_official_gazebo_demo.launch.py  piper_official_moveit_demo.launch.py  piper_real.launch.py  piper_sim.launch.py  piper_visualization.launch.py
src/slam_nav_piper_bringup/scripts/: piper_official_frame_audit.py  piper_preflight_check.py  piper_real_readiness_report.py
src/slam_nav_piper_calibration/: CMakeLists.txt  README.md  package.xml
src/slam_nav_piper_calibration/config/: hand_eye_calibration.yaml
src/slam_nav_piper_calibration/scripts/: piper_hand_eye_config_check.py
src/slam_nav_piper_control/: CMakeLists.txt  README.md  package.xml
src/slam_nav_piper_control/config/: piper_control.yaml
src/slam_nav_piper_control/launch/: piper_control.launch.py
src/slam_nav_piper_control/scripts/: piper_control_bridge_node.py
src/slam_nav_piper_description/: CMakeLists.txt  README.md  package.xml
src/slam_nav_piper_description/launch/: piper_description.launch.py  piper_official_description.launch.py
src/slam_nav_piper_description/scripts/: piper_description_builder.py
src/slam_nav_piper_description/urdf/: piper_mobile_mount.urdf.xacro
src/slam_nav_piper_learning/: CMakeLists.txt  README.md  package.xml
src/slam_nav_piper_learning/config/: piper_learning.yaml
src/slam_nav_piper_learning/launch/: piper_learning.launch.py
src/slam_nav_piper_learning/scripts/: grasp_candidate_ranker_node.py
src/slam_nav_piper_manipulation/: CMakeLists.txt  README.md  package.xml
src/slam_nav_piper_manipulation/config/: piper_manipulation.yaml
src/slam_nav_piper_manipulation/launch/: piper_manipulation.launch.py
src/slam_nav_piper_manipulation/scripts/: piper_task_server_node.py
src/slam_nav_piper_moveit_config/: CMakeLists.txt  README.md  package.xml
src/slam_nav_piper_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  piper.srdf  ros2_controllers.yaml
src/slam_nav_piper_moveit_config/launch/: piper_project_moveit_plan.launch.py
src/slam_nav_piper_moveit_config/scripts/: piper_fake_joint_state_publisher.py  piper_plan_smoke_test.py  (+1 more)
src/slam_nav_piper_perception/: CMakeLists.txt  README.md  package.xml
src/slam_nav_simulation/: CMakeLists.txt  package.xml
(+180 files in other folders)
