<?xml version="1.0"?>
<package format="3">
  <name>slam_nav_operator</name>
  <version>0.1.0</version>
  <description>Native Qt/RViz operator console for the SLAM Nav workspace.</description>
  <maintainer email="junyu@example.com">junyu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_rendering</depend>

  <exec_depend>slam_nav_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
