<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_nav_piper_bringup</name>
  <version>0.1.0</version>
  <description>Launch entry points for the isolated Piper mobile manipulation extension.</description>
  <maintainer email="junyu-code@users.noreply.github.com">junyu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>slam_nav_piper_control</exec_depend>
  <exec_depend>slam_nav_piper_description</exec_depend>
  <exec_depend>slam_nav_piper_manipulation</exec_depend>
  <exec_depend>slam_nav_piper_perception</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
