<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_nav_piper_calibration</name>
  <version>0.1.0</version>
  <description>Configuration and safety checks for Piper wrist RGB-D hand-eye calibration.</description>
  <maintainer email="junyu-code@users.noreply.github.com">junyu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>slam_nav_piper_description</exec_depend>
  <exec_depend>slam_nav_piper_perception</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
